<resources>
    <string name="app_name">Contact Manager</string>
    <string name="phone_number">Phone Number</string>
    <string name="birthday">Birthday</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="delete_contact">Delete Contact?</string>
    <string name="confirm_delete">Are you sure you want to delete this contact?</string>
    <string name="delete">Delete</string>
    <string name="contact_deleted">The contact has been deleted</string>
    <string name="cancel">Cancel</string>
    <string name="birthday_string">Birthday - %1$d/%2$d/%3$d</string>
</resources>