<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_first_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_last_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintTop_toBottomOf="@id/text_input_first_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_phone_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintTop_toBottomOf="@id/text_input_last_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_birthday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/image_birthday"
        app:layout_constraintTop_toBottomOf="@id/text_input_phone_number" />

    <ImageView
        android:id="@+id/image_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_calender"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@id/text_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_birthday"
        app:layout_constraintTop_toTopOf="@id/text_birthday"
        app:tint="@color/lime_dark"
        android:contentDescription="@string/birthday" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintTop_toBottomOf="@id/text_birthday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_zip_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/zip_code"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:layout_constraintTop_toBottomOf="@id/text_input_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/button_save_changes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes"
        android:layout_marginTop="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:background="@drawable/save_changes_selector"
        app:layout_constraintStart_toStartOf="@id/text_input_zip_code"
        app:layout_constraintEnd_toEndOf="@id/text_input_zip_code"
        app:layout_constraintTop_toBottomOf="@id/text_input_zip_code">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>